--- a/index.html
+++ b/index.html
@@ -4,18 +4,59 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>ACERCA DE MÍ</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  </head>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="estilo.css" rel="stylesheet">
+  
   </head>
   <body>
+    <script src="script.js"></script> </body>   
   <div class="titulo-principal">
     <h1 class="titulo">Karen Silva</h1>
   </div>
-    <!-- Contenedor 1 -->
-    <div class="uno" style="background-color: rgb(197, 151, 246); margin: 20px auto; padding: 20px; width: 700px; border-radius: 10px;">
+<!-- Carrusel de imágenes -->
+<div id="carouselExampleDark" class="carousel carousel-dark slide">
+  <div class="carousel-indicators">
+    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
+    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
+  
+  </div>
+  <div class="carousel-inner">
+    <div class="carousel-item active" data-bs-interval="10000">
+      <img src="sobremi.jpeg" class="d-block w-100 rounded-pill" alt="Primera imagen">
+      <div class="carousel-caption d-none d-md-block">
+        <h5>Esta soy yo</h5>
+        <p>Me encanta la historia y el color morado.</p>
+      </div>
+    </div>
+    <div class="carousel-item" data-bs-interval="2000">
+      <img src="fam.jpg" class="d-block w-100 rounded-pill" alt="Segunda imagen">
+      <div class="carousel-caption d-none d-md-block">
+        <h5>Second slide label</h5>
+        <p>Some representative placeholder content for the second slide.</p>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img src="kini.jpg" class="d-block w-100 rounded-pill" alt="Tercera imagen">
+      <div class="carousel-caption d-none d-md-block">
+        <h5>Third slide label</h5>
+        <p>Some representative placeholder content for the third slide.</p>
+      </div>
+    </div>
+  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+</div>
+
+<!-- SOBRE MI 1 -->
+ <div class="uno" style="background-color: rgb(197, 151, 246); margin: 20px auto; padding: 20px; width: 700px; border-radius: 10px;">
       <h2 class="texto-1">Sobre mí</h2>
       <div class="row">
         <div class="col-md-6">
@@ -23,41 +64,17 @@
           <p>Estudié en la Facultad de Filosofía y Letras, la carrera de Pedagogía, de este periodo universitario me quede con un gran interés en Educación para la Paz y el enfoque de género en la Educación.</p>
         </div>
         <div class="col-md-6">
-          <!-- Carrusel de imágenes -->
-      <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="sobremi.jpeg" class="d-block w-100 rounded-pill" alt="Primera imagen">
-          </div>
-          <div class="carousel-item">
-            <img src="fam.jpg" class="d-block w-100 rounded-pill" alt="Segunda imagen">
-          </div>
-          <div class="carousel-item">
-            <img src="kini.jpg" class="d-block w-100 rounded-pill" alt="Tercera imagen">
-          </div>
+          <p>Soy de un Pueblo Originario de Ecatepec, se llama San Pedro Xalostoc que significa "El lugar de cuevas de arena", me gusta mucho vivir aquí. Y a ultimas fechas participo en el Círculo de Lectura para Mujeres, el cual disfruto mucho.</p>
         </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
       </div>
-      </div>
-    </div>
-  </div>
-</div>
-
-  
+</div>  
 
 <!-- Contenedor 2 -->
 <div class="container my-4">
   <h3 class="text-center">Cosas que más disfruto</h3>
   <table class="table table-bordered table-striped">
     <thead class="table-light">
-      <tr>
+      <tr: hover>
         <th scope="col">#</th>
         <th scope="col">Primera Actividad</th>
         <th scope="col">Segunda Actividad</th>
@@ -65,7 +82,7 @@
       </tr>
     </thead>
     <tbody>
-      <tr>
+      <tr: hover>
         <th scope="row">Mi Top</th>
         <td>Tejer</td>
         <td>Leer</td>
